// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders page one error 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-back-link"
  >
    <a
      class="nhsuk-back-link__link"
      href="/templates/choose-a-template-type"
    >
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__chevron-left"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
        />
      </svg>
      Back to choose a template type
    </a>
  </div>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <div
          aria-labelledby="error-summary-title"
          class="nhsuk-error-summary"
          role="alert"
          tabindex="-1"
        >
          <h2
            class="nhsuk-error-summary__title"
            data-testid="error-summary"
            id="error-summary-title"
          >
            There is a problem
          </h2>
          <ul
            class="nhsuk-list nhsuk-error-summary__list"
          >
            <li>
              <a
                href="#letterTemplateName"
              >
                Template name error
              </a>
            </li>
            <li>
              <a
                href="#letterTemplateLetterType"
              />
            </li>
            <li>
              <a
                href="#letterTemplateLanguage"
              />
            </li>
          </ul>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-letter-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <h1
            class="nhsuk-heading-xl"
            data-testid="page-heading"
          >
            Upload a letter template
          </h1>
          <div
            class="nhsuk-form-group--error"
          >
            <label
              class="nhsuk-label nhsuk-label--s"
              for="letterTemplateName"
            >
              Template name
            </label>
            <div
              class="nhsuk-hint"
            >
              This will not be visible to recipients.
            </div>
            <details
              class="nhsuk-details"
              data-testid="how-to-name-your-template"
            >
              <summary
                class="nhsuk-details__summary"
              >
                <span
                  class="nhsuk-details__summary-text"
                >
                  Naming your templates
                </span>
              </summary>
              <div
                class="nhsuk-details__text"
              >
                <p>
                  You should name your templates in a way that works best for your service or organisation.
                </p>
                <p>
                  Common template names include the:
                </p>
                <ul>
                  <li>
                    message channel it uses
                  </li>
                  <li>
                    subject or reason for the message
                  </li>
                  <li>
                    intended audience for the template
                  </li>
                  <li>
                    version number of the template
                  </li>
                </ul>
                <p
                  data-testid="template-name-example"
                >
                  For example, 'Letter - covid19 2023 - over 65s - version 3'
                </p>
              </div>
            </details>
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <span
                class="nhsuk-error-message"
                id="letterTemplateName--error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Template name error
              </span>
              <input
                aria-describedby="letterTemplateName--error-message"
                class="nhsuk-input nhsuk-input--error"
                id="letterTemplateName"
                name="letterTemplateName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="nhsuk-form-group"
          >
            <label
              class="nhsuk-label"
              for="letterType"
              id="letterType--label"
            >
              Letter type
            </label>
            <div
              class="nhsuk-hint"
              id="letterType--hint"
            >
              Choose the type of letter template you are uploading
            </div>
            <select
              aria-describedby="letterType--hint"
              class="nhsuk-select"
              id="letterType"
              name="letterType"
            >
              <option
                value="x3"
              >
                Audio CD
              </option>
              <option
                value="q1"
              >
                Braille
              </option>
              <option
                value="q4"
              >
                British Sign Language
              </option>
              <option
                value="x0"
              >
                Standard
              </option>
              <option
                value="x1"
              >
                Large print
              </option>
            </select>
          </div>
          <div
            class="nhsuk-form-group"
          >
            <label
              class="nhsuk-label"
              for="letterLanguage"
              id="letterLanguage--label"
            >
              Additional language
            </label>
            <div
              class="nhsuk-hint"
              id="letterLanguage--hint"
            >
              Choose the language of this letter template
            </div>
            <select
              aria-describedby="letterLanguage--hint"
              class="nhsuk-select"
              id="letterLanguage"
              name="letterLanguage"
            >
              <option
                value="ar"
              >
                Arabic
              </option>
              <option
                value="bg"
              >
                Bulgarian
              </option>
              <option
                value="bn"
              >
                Bengali
              </option>
              <option
                value="de"
              >
                German
              </option>
              <option
                value="el"
              >
                Greek
              </option>
              <option
                value="en"
              >
                English
              </option>
              <option
                value="es"
              >
                Spanish
              </option>
              <option
                value="fa"
              >
                Persian
              </option>
              <option
                value="fr"
              >
                French
              </option>
              <option
                value="gu"
              >
                Gujurati
              </option>
              <option
                value="hi"
              >
                Hindi
              </option>
              <option
                value="hu"
              >
                Hungarian
              </option>
              <option
                value="it"
              >
                Italian
              </option>
              <option
                value="ku"
              >
                Kurdish
              </option>
              <option
                value="lt"
              >
                Lithuanian
              </option>
              <option
                value="lv"
              >
                Latvian
              </option>
              <option
                value="ne"
              >
                Nepali
              </option>
              <option
                value="pa"
              >
                Punjabi
              </option>
              <option
                value="pl"
              >
                Polish
              </option>
              <option
                value="pt"
              >
                Portuguese
              </option>
              <option
                value="ro"
              >
                Romanian
              </option>
              <option
                value="ru"
              >
                Russian
              </option>
              <option
                value="sk"
              >
                Slovak
              </option>
              <option
                value="so"
              >
                Somali
              </option>
              <option
                value="sq"
              >
                Albanian
              </option>
              <option
                value="ta"
              >
                Tamil
              </option>
              <option
                value="tr"
              >
                Turkish
              </option>
              <option
                value="ur"
              >
                Urdu
              </option>
              <option
                value="zh"
              >
                Chinese
              </option>
            </select>
          </div>
          <div>
            <span>
              Upload pdf 
            </span>
            <input
              accept="application/pdf"
              name="pdf"
              type="file"
            />
          </div>
          <div>
            <span>
              Upload csv 
            </span>
            <input
              accept="text/csv"
              name="csv"
              type="file"
            />
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            id="create-nhs-app-template-submit-button"
            type="submit"
          >
            Save and upload
          </button>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`renders page with multiple errors 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-back-link"
  >
    <a
      class="nhsuk-back-link__link"
      href="/templates/choose-a-template-type"
    >
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__chevron-left"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
        />
      </svg>
      Back to choose a template type
    </a>
  </div>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <div
          aria-labelledby="error-summary-title"
          class="nhsuk-error-summary"
          role="alert"
          tabindex="-1"
        >
          <h2
            class="nhsuk-error-summary__title"
            data-testid="error-summary"
            id="error-summary-title"
          >
            There is a problem
          </h2>
          <ul
            class="nhsuk-list nhsuk-error-summary__list"
          >
            <li>
              <a
                href="#letterTemplateName"
              >
                Template name error
              </a>
            </li>
            <li>
              <a
                href="#letterType"
              >
                Template letter type error
              </a>
            </li>
            <li>
              <a
                href="#letterLanguage"
              >
                Template language error
              </a>
            </li>
            <li>
              <a
                href="#letterTemplateLetterType"
              />
            </li>
            <li>
              <a
                href="#letterTemplateLanguage"
              />
            </li>
          </ul>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-letter-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <h1
            class="nhsuk-heading-xl"
            data-testid="page-heading"
          >
            Upload a letter template
          </h1>
          <div
            class="nhsuk-form-group--error"
          >
            <label
              class="nhsuk-label nhsuk-label--s"
              for="letterTemplateName"
            >
              Template name
            </label>
            <div
              class="nhsuk-hint"
            >
              This will not be visible to recipients.
            </div>
            <details
              class="nhsuk-details"
              data-testid="how-to-name-your-template"
            >
              <summary
                class="nhsuk-details__summary"
              >
                <span
                  class="nhsuk-details__summary-text"
                >
                  Naming your templates
                </span>
              </summary>
              <div
                class="nhsuk-details__text"
              >
                <p>
                  You should name your templates in a way that works best for your service or organisation.
                </p>
                <p>
                  Common template names include the:
                </p>
                <ul>
                  <li>
                    message channel it uses
                  </li>
                  <li>
                    subject or reason for the message
                  </li>
                  <li>
                    intended audience for the template
                  </li>
                  <li>
                    version number of the template
                  </li>
                </ul>
                <p
                  data-testid="template-name-example"
                >
                  For example, 'Letter - covid19 2023 - over 65s - version 3'
                </p>
              </div>
            </details>
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <span
                class="nhsuk-error-message"
                id="letterTemplateName--error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Template name error
              </span>
              <input
                aria-describedby="letterTemplateName--error-message"
                class="nhsuk-input nhsuk-input--error"
                id="letterTemplateName"
                name="letterTemplateName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="nhsuk-form-group"
          >
            <label
              class="nhsuk-label"
              for="letterType"
              id="letterType--label"
            >
              Letter type
            </label>
            <div
              class="nhsuk-hint"
              id="letterType--hint"
            >
              Choose the type of letter template you are uploading
            </div>
            <select
              aria-describedby="letterType--hint"
              class="nhsuk-select"
              id="letterType"
              name="letterType"
            >
              <option
                value="x3"
              >
                Audio CD
              </option>
              <option
                value="q1"
              >
                Braille
              </option>
              <option
                value="q4"
              >
                British Sign Language
              </option>
              <option
                value="x0"
              >
                Standard
              </option>
              <option
                value="x1"
              >
                Large print
              </option>
            </select>
          </div>
          <div
            class="nhsuk-form-group"
          >
            <label
              class="nhsuk-label"
              for="letterLanguage"
              id="letterLanguage--label"
            >
              Additional language
            </label>
            <div
              class="nhsuk-hint"
              id="letterLanguage--hint"
            >
              Choose the language of this letter template
            </div>
            <select
              aria-describedby="letterLanguage--hint"
              class="nhsuk-select"
              id="letterLanguage"
              name="letterLanguage"
            >
              <option
                value="ar"
              >
                Arabic
              </option>
              <option
                value="bg"
              >
                Bulgarian
              </option>
              <option
                value="bn"
              >
                Bengali
              </option>
              <option
                value="de"
              >
                German
              </option>
              <option
                value="el"
              >
                Greek
              </option>
              <option
                value="en"
              >
                English
              </option>
              <option
                value="es"
              >
                Spanish
              </option>
              <option
                value="fa"
              >
                Persian
              </option>
              <option
                value="fr"
              >
                French
              </option>
              <option
                value="gu"
              >
                Gujurati
              </option>
              <option
                value="hi"
              >
                Hindi
              </option>
              <option
                value="hu"
              >
                Hungarian
              </option>
              <option
                value="it"
              >
                Italian
              </option>
              <option
                value="ku"
              >
                Kurdish
              </option>
              <option
                value="lt"
              >
                Lithuanian
              </option>
              <option
                value="lv"
              >
                Latvian
              </option>
              <option
                value="ne"
              >
                Nepali
              </option>
              <option
                value="pa"
              >
                Punjabi
              </option>
              <option
                value="pl"
              >
                Polish
              </option>
              <option
                value="pt"
              >
                Portuguese
              </option>
              <option
                value="ro"
              >
                Romanian
              </option>
              <option
                value="ru"
              >
                Russian
              </option>
              <option
                value="sk"
              >
                Slovak
              </option>
              <option
                value="so"
              >
                Somali
              </option>
              <option
                value="sq"
              >
                Albanian
              </option>
              <option
                value="ta"
              >
                Tamil
              </option>
              <option
                value="tr"
              >
                Turkish
              </option>
              <option
                value="ur"
              >
                Urdu
              </option>
              <option
                value="zh"
              >
                Chinese
              </option>
            </select>
          </div>
          <div>
            <span>
              Upload pdf 
            </span>
            <input
              accept="application/pdf"
              name="pdf"
              type="file"
            />
          </div>
          <div>
            <span>
              Upload csv 
            </span>
            <input
              accept="text/csv"
              name="csv"
              type="file"
            />
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            id="create-nhs-app-template-submit-button"
            type="submit"
          >
            Save and upload
          </button>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`renders page with preloaded field values 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-back-link"
  >
    <a
      class="nhsuk-back-link__link"
      href="/templates/choose-a-template-type"
    >
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__chevron-left"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
        />
      </svg>
      Back to choose a template type
    </a>
  </div>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-letter-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <h1
            class="nhsuk-heading-xl"
            data-testid="page-heading"
          >
            Upload a letter template
          </h1>
          <div>
            <label
              class="nhsuk-label nhsuk-label--s"
              for="letterTemplateName"
            >
              Template name
            </label>
            <div
              class="nhsuk-hint"
            >
              This will not be visible to recipients.
            </div>
            <details
              class="nhsuk-details"
              data-testid="how-to-name-your-template"
            >
              <summary
                class="nhsuk-details__summary"
              >
                <span
                  class="nhsuk-details__summary-text"
                >
                  Naming your templates
                </span>
              </summary>
              <div
                class="nhsuk-details__text"
              >
                <p>
                  You should name your templates in a way that works best for your service or organisation.
                </p>
                <p>
                  Common template names include the:
                </p>
                <ul>
                  <li>
                    message channel it uses
                  </li>
                  <li>
                    subject or reason for the message
                  </li>
                  <li>
                    intended audience for the template
                  </li>
                  <li>
                    version number of the template
                  </li>
                </ul>
                <p
                  data-testid="template-name-example"
                >
                  For example, 'Letter - covid19 2023 - over 65s - version 3'
                </p>
              </div>
            </details>
            <div
              class="nhsuk-form-group"
            >
              <input
                class="nhsuk-input"
                id="letterTemplateName"
                name="letterTemplateName"
                type="text"
                value="template-name"
              />
            </div>
          </div>
          <div
            class="nhsuk-form-group"
          >
            <label
              class="nhsuk-label"
              for="letterType"
              id="letterType--label"
            >
              Letter type
            </label>
            <div
              class="nhsuk-hint"
              id="letterType--hint"
            >
              Choose the type of letter template you are uploading
            </div>
            <select
              aria-describedby="letterType--hint"
              class="nhsuk-select"
              id="letterType"
              name="letterType"
            >
              <option
                value="x3"
              >
                Audio CD
              </option>
              <option
                selected=""
                value="q1"
              >
                Braille
              </option>
              <option
                value="q4"
              >
                British Sign Language
              </option>
              <option
                value="x0"
              >
                Standard
              </option>
              <option
                value="x1"
              >
                Large print
              </option>
            </select>
          </div>
          <div
            class="nhsuk-form-group"
          >
            <label
              class="nhsuk-label"
              for="letterLanguage"
              id="letterLanguage--label"
            >
              Additional language
            </label>
            <div
              class="nhsuk-hint"
              id="letterLanguage--hint"
            >
              Choose the language of this letter template
            </div>
            <select
              aria-describedby="letterLanguage--hint"
              class="nhsuk-select"
              id="letterLanguage"
              name="letterLanguage"
            >
              <option
                selected=""
                value="ar"
              >
                Arabic
              </option>
              <option
                value="bg"
              >
                Bulgarian
              </option>
              <option
                value="bn"
              >
                Bengali
              </option>
              <option
                value="de"
              >
                German
              </option>
              <option
                value="el"
              >
                Greek
              </option>
              <option
                value="en"
              >
                English
              </option>
              <option
                value="es"
              >
                Spanish
              </option>
              <option
                value="fa"
              >
                Persian
              </option>
              <option
                value="fr"
              >
                French
              </option>
              <option
                value="gu"
              >
                Gujurati
              </option>
              <option
                value="hi"
              >
                Hindi
              </option>
              <option
                value="hu"
              >
                Hungarian
              </option>
              <option
                value="it"
              >
                Italian
              </option>
              <option
                value="ku"
              >
                Kurdish
              </option>
              <option
                value="lt"
              >
                Lithuanian
              </option>
              <option
                value="lv"
              >
                Latvian
              </option>
              <option
                value="ne"
              >
                Nepali
              </option>
              <option
                value="pa"
              >
                Punjabi
              </option>
              <option
                value="pl"
              >
                Polish
              </option>
              <option
                value="pt"
              >
                Portuguese
              </option>
              <option
                value="ro"
              >
                Romanian
              </option>
              <option
                value="ru"
              >
                Russian
              </option>
              <option
                value="sk"
              >
                Slovak
              </option>
              <option
                value="so"
              >
                Somali
              </option>
              <option
                value="sq"
              >
                Albanian
              </option>
              <option
                value="ta"
              >
                Tamil
              </option>
              <option
                value="tr"
              >
                Turkish
              </option>
              <option
                value="ur"
              >
                Urdu
              </option>
              <option
                value="zh"
              >
                Chinese
              </option>
            </select>
          </div>
          <div>
            <span>
              Upload pdf 
            </span>
            <input
              accept="application/pdf"
              name="pdf"
              type="file"
            />
          </div>
          <div>
            <span>
              Upload csv 
            </span>
            <input
              accept="text/csv"
              name="csv"
              type="file"
            />
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            id="create-nhs-app-template-submit-button"
            type="submit"
          >
            Save and upload
          </button>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`renders page without back link for initial state with id - edit mode 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-back-link"
  >
    <a
      class="nhsuk-back-link__link"
      href="/templates/choose-a-template-type"
    >
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__chevron-left"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
        />
      </svg>
      Back to choose a template type
    </a>
  </div>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-letter-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <h1
            class="nhsuk-heading-xl"
            data-testid="page-heading"
          >
            Upload a letter template
          </h1>
          <div>
            <label
              class="nhsuk-label nhsuk-label--s"
              for="letterTemplateName"
            >
              Template name
            </label>
            <div
              class="nhsuk-hint"
            >
              This will not be visible to recipients.
            </div>
            <details
              class="nhsuk-details"
              data-testid="how-to-name-your-template"
            >
              <summary
                class="nhsuk-details__summary"
              >
                <span
                  class="nhsuk-details__summary-text"
                >
                  Naming your templates
                </span>
              </summary>
              <div
                class="nhsuk-details__text"
              >
                <p>
                  You should name your templates in a way that works best for your service or organisation.
                </p>
                <p>
                  Common template names include the:
                </p>
                <ul>
                  <li>
                    message channel it uses
                  </li>
                  <li>
                    subject or reason for the message
                  </li>
                  <li>
                    intended audience for the template
                  </li>
                  <li>
                    version number of the template
                  </li>
                </ul>
                <p
                  data-testid="template-name-example"
                >
                  For example, 'Letter - covid19 2023 - over 65s - version 3'
                </p>
              </div>
            </details>
            <div
              class="nhsuk-form-group"
            >
              <input
                class="nhsuk-input"
                id="letterTemplateName"
                name="letterTemplateName"
                type="text"
                value="template-name"
              />
            </div>
          </div>
          <div
            class="nhsuk-form-group"
          >
            <label
              class="nhsuk-label"
              for="letterType"
              id="letterType--label"
            >
              Letter type
            </label>
            <div
              class="nhsuk-hint"
              id="letterType--hint"
            >
              Choose the type of letter template you are uploading
            </div>
            <select
              aria-describedby="letterType--hint"
              class="nhsuk-select"
              id="letterType"
              name="letterType"
            >
              <option
                value="x3"
              >
                Audio CD
              </option>
              <option
                selected=""
                value="q1"
              >
                Braille
              </option>
              <option
                value="q4"
              >
                British Sign Language
              </option>
              <option
                value="x0"
              >
                Standard
              </option>
              <option
                value="x1"
              >
                Large print
              </option>
            </select>
          </div>
          <div
            class="nhsuk-form-group"
          >
            <label
              class="nhsuk-label"
              for="letterLanguage"
              id="letterLanguage--label"
            >
              Additional language
            </label>
            <div
              class="nhsuk-hint"
              id="letterLanguage--hint"
            >
              Choose the language of this letter template
            </div>
            <select
              aria-describedby="letterLanguage--hint"
              class="nhsuk-select"
              id="letterLanguage"
              name="letterLanguage"
            >
              <option
                selected=""
                value="ar"
              >
                Arabic
              </option>
              <option
                value="bg"
              >
                Bulgarian
              </option>
              <option
                value="bn"
              >
                Bengali
              </option>
              <option
                value="de"
              >
                German
              </option>
              <option
                value="el"
              >
                Greek
              </option>
              <option
                value="en"
              >
                English
              </option>
              <option
                value="es"
              >
                Spanish
              </option>
              <option
                value="fa"
              >
                Persian
              </option>
              <option
                value="fr"
              >
                French
              </option>
              <option
                value="gu"
              >
                Gujurati
              </option>
              <option
                value="hi"
              >
                Hindi
              </option>
              <option
                value="hu"
              >
                Hungarian
              </option>
              <option
                value="it"
              >
                Italian
              </option>
              <option
                value="ku"
              >
                Kurdish
              </option>
              <option
                value="lt"
              >
                Lithuanian
              </option>
              <option
                value="lv"
              >
                Latvian
              </option>
              <option
                value="ne"
              >
                Nepali
              </option>
              <option
                value="pa"
              >
                Punjabi
              </option>
              <option
                value="pl"
              >
                Polish
              </option>
              <option
                value="pt"
              >
                Portuguese
              </option>
              <option
                value="ro"
              >
                Romanian
              </option>
              <option
                value="ru"
              >
                Russian
              </option>
              <option
                value="sk"
              >
                Slovak
              </option>
              <option
                value="so"
              >
                Somali
              </option>
              <option
                value="sq"
              >
                Albanian
              </option>
              <option
                value="ta"
              >
                Tamil
              </option>
              <option
                value="tr"
              >
                Turkish
              </option>
              <option
                value="ur"
              >
                Urdu
              </option>
              <option
                value="zh"
              >
                Chinese
              </option>
            </select>
          </div>
          <div>
            <span>
              Upload pdf 
            </span>
            <input
              accept="application/pdf"
              name="pdf"
              type="file"
            />
          </div>
          <div>
            <span>
              Upload csv 
            </span>
            <input
              accept="text/csv"
              name="csv"
              type="file"
            />
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            id="create-nhs-app-template-submit-button"
            type="submit"
          >
            Save and upload
          </button>
        </form>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
